# snowball-core

./: .gitignore  CMakeLists.txt  LICENSE  README.md  core.cpp  core.h
include/: Snowball.h
src/: core.cpp  core.h
